<resources>
    <string name="app_name">Essay</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_study">StudyActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="tip_positive">确定</string>
    <string name="tip_negative">取消</string>
    <string name="warning_no_content">必须输入一些内容</string>
    <string name="essay">随笔</string>
    <string name="title">标题</string>
    <string name="box_home">主页</string>
    <string name="box_photo">图片</string>
    <string name="box_video">视频</string>
    <string name="box_photo_ranking">图片排行</string>
    <string name="box_video_ranking">视频排行</string>
    <string name="cos_hot">最热</string>
    <string name="cos_new">最新</string>

    <string name="music_label_play">播放</string>
    <string name="music_label_pause">暂停</string>
    <string name="music_label_stop">停止</string>
    <string name="music_label_previous">上一首</string>
    <string name="music_label_next">下一首</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="box_settings">设置</string>
    <string name="box_media">影视</string>

</resources>
