<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lpzahd.essay.context.essay.EssayActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/box_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_photo"
        android:orderInCategory="2"
        android:title="@string/box_photo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_video"
        android:orderInCategory="3"
        android:title="@string/box_video"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_photo_ranking"
        android:orderInCategory="3"
        android:title="@string/box_photo_ranking"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_video_ranking"
        android:orderInCategory="3"
        android:title="@string/box_video_ranking"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/box_settings"
        app:showAsAction="never" />

</menu>
